refactor: update build in pom.xml
Rebuilding project due to errors running it.